--- a/package.json
+++ b/package.json
@@ -6,24 +6,25 @@
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
-    "async-error-catcher": "^1.0.1",
-    "bcrypt": "^3.0.2",
-    "body-parser": "~1.18.2",
+    "async-error-catcher": "^1.2.0",
+    "body-parser": "^1.18.3",
     "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.3",
-    "debug": "~2.6.9",
+    "debug": "^3.1.0",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
-    "method-override": "^2.3.10",
-    "moment": "^2.19.1",
-    "mongoose": "^4.12.4",
+    "method-override": "^3.0.0",
+    "moment": "^2.22.2",
+    "mongoose": "^5.2.12",
     "mongoose-paginate": "^5.0.3",
     "morgan": "~1.9.0",
-    "node-sass-middleware": "0.9.8",
+    "node-sass-middleware": "^0.11.0",
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
     "passport-local": "^1.0.0",
-    "pug": "2.0.0-beta11",
-    "serve-favicon": "~2.4.5"
+    "passport.socketio": "^3.7.0",
+    "pug": "^2.0.3",
+    "serve-favicon": "^2.5.0",
+    "socket.io": "^2.1.1"
   }
 }
