--- a/package.json
+++ b/package.json
@@ -7,17 +7,20 @@
   },
   "dependencies": {
     "async-error-catcher": "^1.2.0",
+    "bcrypt": "^3.0.2",
     "body-parser": "^1.18.3",
     "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.3",
     "debug": "^3.1.0",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
+    "fs-extra": "^7.0.1",
     "method-override": "^3.0.0",
     "moment": "^2.22.2",
     "mongoose": "^5.2.12",
     "mongoose-paginate": "^5.0.3",
     "morgan": "~1.9.0",
+    "multer": "^1.4.1",
     "node-sass-middleware": "^0.11.0",
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
