--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "scripts": {
     "start": "nodemon ./bin/www"
   },
+  "engines": {
+    "node": "8s.12.0"
+  },
   "dependencies": {
     "async-error-catcher": "^1.2.0",
     "bcrypt": "^3.0.2",
