--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "nodemon ./bin/www"
   },
   "engines": {
-    "node": "8s.12.0"
+    "node": "8.12.0"
   },
   "dependencies": {
     "async-error-catcher": "^1.2.0",
